[package]
name = "turso-migrate"
version = "0.1.1"
authors = ["Manuel Adameit <mail@manueladameit.com>"]
categories = ["database"]
description = "Simple schema migration library for turso using user_version instead of an SQL table to maintain the current schema version."
documentation = "https://docs.rs/turso-migrate"
edition = "2021"
keywords = ["database", "migration", "turso", "sqlite"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/maun/turso-migrate"

[dependencies]
thiserror = "2.0.11"
turso = "0.4.4"
tracing = { version = "0.1", optional = true }

[features]
tracing = ["dep:tracing"]

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
